syntax = "proto3";
package management;

message RemoveProjectionsRequest {
	repeated string projection_names = 1;
}

message RemoveProjectionsResponse {}
