syntax = "proto3";
package management;

message UpdateProjectionsRequest {
	string schema = 1;
}

message UpdateProjectionsResponse {}
